--- a/ModelVIewerDemo/index.html
+++ b/ModelVIewerDemo/index.html
@@ -33,10 +33,10 @@
 <!-- Use it like any other HTML element -->
 <model-viewer 
     alt="Cartera de Isadora" 
-    src="/Purse.glb" 
+    src="./Purse.glb" 
     ar 
     ar-modes="webxr scene-viewer quick-look" 
-    poster="IsadoraLogo.jpeg" 
+    poster="./IsadoraLogo.jpeg" 
     seamless-poster 
     shadow-intensity="1" 
     camera-controls>
